Route boundary partition through ordered input